# actix-graphql-integrations-starter-kit

./: .env  .env.example  .gitignore  Cargo.toml  README.md
.obsidian/: app.json  workspace.json
src/: main.rs
src/clients/: mod.rs
src/clients/prestashop/: mod.rs  types.rs
src/clients/shopify/: README.md  mod.rs  types.rs
src/graphql/: inputs.rs  mod.rs  resolvers.rs
src/structs/: carts.rs  mod.rs  orders.rs  products.rs  users.rs  utils.rs
src/transformers/: mod.rs  order.rs  product.rs
src/utils/: mod.rs
