[package]
name = "bumblebee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2", features = ["full"]}
actix = "0.13.0"
actix-cors = "0.6.3"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
async-graphql = { version = "4.0.16", features = ["bson", "chrono"] }
async-graphql-actix-web = "4.0.15"
dotenv  = "0.15.0"

futures = "0.3.25"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = "0.4.23"

